[gd_scene load_steps=3 format=3 uid="uid://d0cnml7abwrk2"]

[ext_resource type="Script" uid="uid://k2gup60pylmn" path="res://states/authentication/authentication.gd" id="1_k6pie"]

[sub_resource type="ButtonGroup" id="ButtonGroup_nw6km"]

[node name="Authentication" type="Node"]
script = ExtResource("1_k6pie")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="AuthenticationContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 3

[node name="TopContainer" type="VBoxContainer" parent="UI/MarginContainer/AuthenticationContainer"]
layout_mode = 2

[node name="ClientsOnline" type="Label" parent="UI/MarginContainer/AuthenticationContainer/TopContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="Status" type="Label" parent="UI/MarginContainer/AuthenticationContainer/TopContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="UsernameInput" type="LineEdit" parent="UI/MarginContainer/AuthenticationContainer/TopContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Username"
alignment = 1
max_length = 32

[node name="PasswordInput" type="LineEdit" parent="UI/MarginContainer/AuthenticationContainer/TopContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Password"
alignment = 1
max_length = 64

[node name="NicknameInput" type="LineEdit" parent="UI/MarginContainer/AuthenticationContainer/TopContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Nickname"
alignment = 1
max_length = 20

[node name="BottomContainer" type="VBoxContainer" parent="UI/MarginContainer/AuthenticationContainer"]
layout_mode = 2

[node name="GenderContainer" type="HBoxContainer" parent="UI/MarginContainer/AuthenticationContainer/BottomContainer"]
layout_mode = 2
alignment = 1

[node name="MaleRadioButton" type="CheckBox" parent="UI/MarginContainer/AuthenticationContainer/BottomContainer/GenderContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_nw6km")
text = "Male"

[node name="FemaleRadioButton" type="CheckBox" parent="UI/MarginContainer/AuthenticationContainer/BottomContainer/GenderContainer"]
layout_mode = 2
button_group = SubResource("ButtonGroup_nw6km")
text = "Female"

[node name="ButtonContainer" type="HBoxContainer" parent="UI/MarginContainer/AuthenticationContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="LoginButton" type="Button" parent="UI/MarginContainer/AuthenticationContainer/BottomContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="UI/MarginContainer/AuthenticationContainer/BottomContainer/ButtonContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Register"

[connection signal="toggled" from="UI/MarginContainer/AuthenticationContainer/BottomContainer/GenderContainer/MaleRadioButton" to="." method="_on_male_radio_button_toggled"]
[connection signal="toggled" from="UI/MarginContainer/AuthenticationContainer/BottomContainer/GenderContainer/FemaleRadioButton" to="." method="_on_female_radio_button_toggled"]
[connection signal="pressed" from="UI/MarginContainer/AuthenticationContainer/BottomContainer/ButtonContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/AuthenticationContainer/BottomContainer/ButtonContainer/RegisterButton" to="." method="_on_register_button_pressed"]
